--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,53 @@
   text-align: center;
 }
 
+.toDoList input {
+  height: 17px;
+  padding: 10px;
+}
+
+
+
+.toDoList button {
+  background: #000;
+  border-radius: 0;
+  height: 40px;
+  color: #fff;
+  padding: 1px 30px;
+  top: 2px;
+  position: relative;
+  margin-left: 10px;
+}
+.toDoList ul {
+  list-style: auto;
+  text-align: left;
+}
+.toDoList ul li {
+  margin-bottom: 10px;
+}
+
+.toDoList ul li:last-child {
+  margin-bottom: 0px;
+}
+
+
+table.toDoItemTable {
+  width: 100%;
+  margin-top: 30px;
+  border: 2px solid #000000;
+  padding: 10px;
+}
+
+table.toDoItemTable thead {
+  background: red;
+  color: #ffffff;
+}
+
+table.toDoItemTable tbody tr {
+  border: 1px solid #cccccc;
+  padding: 5px;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
 
